--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,10 +15,15 @@ jobs:
       DB_DATABASE: laravel
       DB_USERNAME: root
       DB_PASSWORD: password
+      DB_HOST: 127.0.0.1
+      DB_PORT: 32574
+      REDIS_PORT: 6379
       BROADCAST_DRIVER: log
       CACHE_DRIVER: redis
       QUEUE_CONNECTION: redis
       SESSION_DRIVER: redis
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: laravel
     services:
       mariadb:
         image: mariadb:10.6
