--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,23 +16,19 @@ jobs:
       DB_USERNAME: root
       DB_PASSWORD: password
       DB_HOST: 127.0.0.1
-      DB_PORT: 32574
-      REDIS_PORT: 6379
       BROADCAST_DRIVER: log
       CACHE_DRIVER: redis
       QUEUE_CONNECTION: redis
       SESSION_DRIVER: redis
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: laravel
     services:
       mariadb:
-        image: mariadb:10.6
+        image: mariadb:10.11
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: false
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: laravel
         ports:
-          - 32574:3306
+          - 3306/tcp
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
       redis:
